api/src/graphql/snapshots/api__graphql__test__agent_can_be_created.snap
---
source: api/src/graphql/mod.rs
assertion_line: 1137
expression: create
---
[data.agent]
context = 'http://blockchaintp.com/chronicle/ns#agent:bobross'
