api/src/graphql/snapshots/api__graphql__test__agent_can_be_created_and_queried.snap
---
source: api/src/graphql/mod.rs
assertion_line: 819
expression: create
---
[data.createAgent]
context = 'http://blockchaintp.com/chronicle/ns#agent:bobross'
