api/src/graphql/snapshots/api__graphql__test__delegation-2.snap
---
source: api/src/graphql/mod.rs
assertion_line: 1081
expression: derived
---
[[data.agentById.actedOnBehalfOf]]
id = 'http://blockchaintp.com/chronicle/ns#agent:delegate'
