api/src/graphql/snapshots/api__graphql__test__primary_source-2.snap
---
source: api/src/graphql/mod.rs
assertion_line: 1059
expression: derived
---
[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.hadPrimarySource]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
