api/src/graphql/snapshots/api__graphql__test__primary_source.snap
---
source: api/src/graphql/mod.rs
assertion_line: 999
expression: created
---
[data.hadPrimarySource]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
