api/src/graphql/snapshots/api__graphql__test__quotation-2.snap
---
source: api/src/graphql/mod.rs
assertion_line: 1137
expression: derived
---
[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.wasQuotedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
