api/src/graphql/snapshots/api__graphql__test__revision-2.snap
---
source: api/src/graphql/mod.rs
assertion_line: 1098
expression: derived
---
[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.wasRevisionOf]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
